finished condensing css and making fixes to spacing

--- a/style.css
+++ b/style.css
@@ -15,26 +15,20 @@ html, body, .container {
 	justify-content: space-between;
 	flex-shrink: 0;
 }
-.row article, .row article:first-of-type {
-	display: flex;
-	flex-direction: column;
-	border: 1px solid lightblue;
-	margin: 1em;
-	flex-basis: 30%;
-	height: 100%;
-	margin-left: auto;
-	margin-right: auto;
-}
-.row article > header {
-	border: 1px dotted lightgray;
-}
-
 .row article {
 	margin: 1em;
 	flex-basis: 30%;
 	height: 100%;
 	margin-right: auto;
 	margin-left: auto;
+}
+.card > header {
+	border: 1px dotted lightgray;
+}
+.card {
+	display: flex;
+	flex-direction: column;
+	border: 1px solid lightblue;
 }
 
 article header h1 {
